--- a/index.html
+++ b/index.html
@@ -3,43 +3,36 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Homenaje a Juan Julio Silva Regalado</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; background: #f5f5f5; color: #333; }
-        header { background: #2c3e50; color: white; text-align: center; padding: 2rem 1rem; }
-        main { padding: 2rem; max-width: 800px; margin: auto; background: white; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-        img { max-width: 100%; height: auto; border-radius: 8px; }
-        .gallery img { width: 100px; margin: 5px; border-radius: 4px; }
-        footer { text-align: center; padding: 1rem; font-size: 0.9rem; color: #999; }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Juan Julio Silva Regalado</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Juan Julio Silva Regalado</h1>
-        <p>1944 – 2025</p>
+        <p class="dates">1944 – 2025</p>
     </header>
-    <main>
-        <img src="img/foto-principal.jpg" alt="Foto de Juan Julio Silva Regalado">
-        <section>
-            <h2>En memoria</h2>
-            <p>Este sitio web está dedicado a honrar la vida y el legado de Juan Julio Silva Regalado.</p>
-        </section>
-        <section>
-            <h2>Video homenaje</h2>
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/" frameborder="0" allowfullscreen></iframe>
-        </section>
-        <section>
-            <h2>Galería</h2>
-            <div class="gallery">
-                <!-- Puedes agregar más imágenes aquí -->
-                <img src="galeria/ejemplo1.jpg" alt="Ejemplo 1">
-                <img src="galeria/ejemplo2.jpg" alt="Ejemplo 2">
-            </div>
-        </section>
-    </main>
+
+    <section class="photo">
+        <img src="20140222_100832.jpg" alt="Juan Julio Silva Regalado">
+    </section>
+
+    <section class="quote">
+        <p>"Julio Silva Regalado un padre de valores firmes y reflejo de amor, esfuerzo y sacrificio hacia su familia. Muestra de solidaridad a su prójimo, lucha constante contra el Parkinson, símbolo de valor, respeto e inteligencia."</p>
+    </section>
+
+    <section class="video">
+        <h2>Video Homenaje</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vfZ0B9mki9M" title="Homenaje a Juan Julio Silva Regalado" frameborder="0" allowfullscreen></iframe>
+    </section>
+
+    <section class="location">
+        <h2>Ubicación</h2>
+        <a href="https://maps.app.goo.gl/AJyR7onPkLN6XjN39" target="_blank">Jardines de la esperanza Campo Santo</a>
+    </section>
+
     <footer>
-        © 2025 Homenaje a Juan Julio
+        <p>Con amor y recuerdo eterno de su familia.</p>
     </footer>
 </body>
 </html>
